creacion de vistas login - citas

--- a/safelife/package.json
+++ b/safelife/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-big-calendar": "^0.40.1",
+    "react-datepicker": "^4.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
