--- a/safelife/package.json
+++ b/safelife/package.json
@@ -14,7 +14,8 @@
     "react-big-calendar": "^0.40.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "sweetalert2": "^11.4.29"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
